-Completed the task to download and save the Industry Jobs.
Former-commit-id: 508c9c093c6bc7d4cd5e20f6cbbaaa84af2173bb

--- a/Neocom.MicroServices/src/main/resources/properties/databasedefinition.properties
+++ b/Neocom.MicroServices/src/main/resources/properties/databasedefinition.properties
@@ -13,6 +13,7 @@ R.database.neocom.databasename=neocom
 R.database.neocom.databaseuser=NEOCOMTEST
 R.database.neocom.databasepassword=01.Alpha
 R.database.neocom.databaseversion=110
+R.database.neocom.databaseoptions=&verifyServerCertificate=false&useSSL=true
 R.database.sdedatabase.databaseschema=jdbc:sqlite
 R.database.sdedatabase.databasepath=./src/main/resources/
 R.database.sdedatabase.databasename=sde.db
