-Updated library configuration.
Former-commit-id: 0daaaa15a4a056475f07763e8a0432fa979d0cce

--- a/Neocom.MicroServices/src/main/resources/properties/cache.properties
+++ b/Neocom.MicroServices/src/main/resources/properties/cache.properties
@@ -12,5 +12,6 @@
 #               runtime implementation provided by the Application.
 R.cache.directorypath=./src/main/resources/cache/
 R.cache.locationscache.filename=LocationsCache.store
+R.cache.esinetwork.filename=ESINetworkManager.cache.store
 R.cache.locationscache.activestate=true
 R.cache.locationscache.writedown=citadelupdate
