--- a/Neocom.MicroServices/build.gradle
+++ b/Neocom.MicroServices/build.gradle
@@ -81,20 +81,20 @@ dependencies {
 //    implementation 'redis.clients:jedis:2.4.1'
 
     // N E O C O M . M O D E L
+    implementation 'org.slf4j:slf4j-api:1.7.25'
     implementation 'joda-time:joda-time:2.3'
-    implementation 'com.beimin:eveapi:6.0.6'
-    implementation 'org.htmlparser:htmlparser:2.1'
-    implementation 'com.github.scribejava:scribejava-core:5.4.0'
+//    implementation 'com.beimin:eveapi:6.0.6'
+//    implementation 'org.htmlparser:htmlparser:2.1'
+//    implementation 'com.github.scribejava:scribejava-core:5.4.0'
     implementation 'com.squareup.retrofit2:converter-jackson:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'org.modelmapper:modelmapper:1.1.0'
-    implementation 'com.annimon:stream:1.1.9'
-    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.8.6'
+//    implementation 'com.annimon:stream:1.1.9'
+//    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.8.6'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-joda:2.8.6'
-    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-json-org:2.8.6'
+//    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-json-org:2.8.6'
     implementation 'org.apache.commons:commons-lang3:3.7'
-
-    implementation 'org.slf4j:slf4j-api:1.7.25'
+//
     implementation 'com.j256.ormlite:ormlite-core:4.48'
     implementation 'com.j256.ormlite:ormlite-jdbc:4.48'
     implementation 'org.xerial:sqlite-jdbc:3.16.1'
@@ -110,12 +110,12 @@ dependencies {
 
     testImplementation 'junit:junit:4.12'
 //    testImplementation 'org.slf4j:slf4j-simple:1.7.25'
-    testImplementation 'joda-time:joda-time:2.3'
-    testImplementation 'com.j256.ormlite:ormlite-core:4.48'
-    testImplementation 'com.j256.ormlite:ormlite-jdbc:4.48'
-    testImplementation 'org.xerial:sqlite-jdbc:3.16.1'
-    testImplementation 'mysql:mysql-connector-java:5.1.45'
-    testImplementation 'com.fasterxml.jackson.core:jackson-annotations:2.8.6'
-    testImplementation 'com.fasterxml.jackson.datatype:jackson-datatype-joda:2.8.6'
-    testImplementation 'org.apache.commons:commons-lang3:3.7'
+//    testImplementation 'joda-time:joda-time:2.3'
+//    testImplementation 'com.j256.ormlite:ormlite-core:4.48'
+//    testImplementation 'com.j256.ormlite:ormlite-jdbc:4.48'
+//    testImplementation 'org.xerial:sqlite-jdbc:3.16.1'
+//    testImplementation 'mysql:mysql-connector-java:5.1.45'
+//    testImplementation 'com.fasterxml.jackson.core:jackson-annotations:2.8.6'
+//    testImplementation 'com.fasterxml.jackson.datatype:jackson-datatype-joda:2.8.6'
+//    testImplementation 'org.apache.commons:commons-lang3:3.7'
 }
