--- a/Neocom.MicroServices/src/main/resources/properties/marketdatacache.properties
+++ b/Neocom.MicroServices/src/main/resources/properties/marketdatacache.properties
@@ -14,3 +14,4 @@ R.cache.marketdata.cachename=MarketDataService.store
 R.cache.marketdata.provider.activateEMD=true
 R.cache.marketdata.provider.activateEC=false
 R.cache.marketdata.provider.activateESI=false
+R.cache.marketdata.markethubs.configuration.path=src/main/resources/properties/markethubs.txt
