--- a/Neocom.MicroServices/src/main/resources/properties/neocom_preferences.properties
+++ b/Neocom.MicroServices/src/main/resources/properties/neocom_preferences.properties
@@ -22,6 +22,7 @@ prefkey_BlockCharacterUpdate=true
 prefkey_BlockAssetsUpdate=false
 prefkey_BlockColonyUpdate=true
 prefkey_BlockSkillsUpdate=true
+prefkey_BlockIndustryUpdate=true
 category_Industry=Industry
 prefkey_AllowMoveRequests=true
 category_Assets=Assets
