--- a/Neocom.MicroServices/src/main/resources/properties/cache.properties
+++ b/Neocom.MicroServices/src/main/resources/properties/cache.properties
@@ -10,7 +10,7 @@
 #               implementation that reduces dependencies and allows separate use of the modules. Still
 #               there should be some initialization/configuration code to connect the new library to the
 #               runtime implementation provided by the Application.
-R.cache.directorypath=./src/main/resources/cache/
+R.cache.directorypath=NeoComCache/
 R.cache.locationscache.filename=LocationsCache.store
 R.cache.esinetwork.filename=ESINetworkManager.cache.store
 R.cache.locationscache.activestate=true
