--- a/Neocom.MicroServices/src/main/resources/properties/runtime.properties
+++ b/Neocom.MicroServices/src/main/resources/properties/runtime.properties
@@ -6,6 +6,9 @@
 #               application based on Angular+SB. This is the web version for the NeoCom Android native
 #               application. Most of the source code is common to both platforms and this module includes
 #               the source for the specific functionality for the backend services.
-#  UPDATER.PROPERTIES
-#  Defines the configuration data to allow the start of the timed updater or the execution of specific update jobs.
-R.updater.allowtimer=false
+# RUNTIME.PROPERTIES
+# Definition of properties that set if we are running on development, production or mock data.
+R.runtime.development=true
+R.runtime.mockdata=true
+R.runtime.mockdata.location=mockdata/
+R.runtime.debuglevel=true
