-Updraded Application initialization to include the new File System. -New controller to get Manufacture Resources calculation page. -Moved the code to manage the Fitting cache to Global.
Former-commit-id: ef9c9e0fb5fc5a62a0d9cda582288104034633ec

--- a/Neocom.MicroServices/src/main/resources/properties/cache.properties
+++ b/Neocom.MicroServices/src/main/resources/properties/cache.properties
@@ -11,7 +11,7 @@
 #               there should be some initialization/configuration code to connect the new library to the
 #               runtime implementation provided by the Application.
 R.cache.directorypath=NeoComCache/
-R.cache.locationscache.filename=LocationsCache.store
+R.cache.locationscache.filename=Locations.cache.store
 R.cache.esinetwork.filename=ESINetworkManager.cache.store
 R.cache.locationscache.activestate=true
 R.cache.locationscache.writedown=citadelupdate
