--- a/Neocom.MicroServices/src/main/resources/properties/mockfiles.properties
+++ b/Neocom.MicroServices/src/main/resources/properties/mockfiles.properties
@@ -8,5 +8,5 @@
 #               the source for the specific functionality for the backend services.
 # MOCKFILES.PROPERTIES
 # The configuration rules to get access to the json sample files to be used on testing.
-R.mock.path=./src/main/resources/mockdata/
+R.mock.path=resources/mockdata/
 R.mock.industryjobs=92002067-industryjobs.json
