-[WIP] Upgraded test code to allow their compilation. Still many changes pending to have a running test code.
Former-commit-id: 2a05ad9913d4bfa2fc361bf0ba28ec6d2f42fb84

--- a/Neocom.MicroServices/build.gradle
+++ b/Neocom.MicroServices/build.gradle
@@ -51,10 +51,12 @@ springBoot {
             group = group
             name = archivesBaseName
         }
-    }}
-//jar {
-//    enabled = true
-//}
+    }
+}
+// Generate also the normal archive in addition to the executable.
+jar {
+    enabled = true
+}
 //jar {
 //    manifest {
 //        attributes("Implementation-Title": "Gradle",
