-[INFINITY][DATABASE] Change the MS configuration to use the PostgreSQL instead of MySQL to make it compatible with the Heroku cloud platform.
Former-commit-id: 45be086c0d81658133887c89fdeb62c512a3f1de

--- a/Neocom.MicroServices/src/main/resources/properties/databasedefinition.properties
+++ b/Neocom.MicroServices/src/main/resources/properties/databasedefinition.properties
@@ -8,12 +8,18 @@
 #               the source for the specific functionality for the backend services.
 #  DATABASEDEFINITION.PROPERTIES
 #  Defines the NeoCom and the SDE database connection characteristics.
-R.database.neocom.databasehost=jdbc:mysql://localhost:3306
-R.database.neocom.databasename=neocom
+R.database.neocom.databasetype=postgres
+R.database.neocom.databasehost=jdbc:postgresql://localhost:5432
+R.database.neocom.databasename=postgres
 R.database.neocom.databaseuser=NEOCOM
 R.database.neocom.databasepassword=01.Alpha
+R.database.neocom.databaseoptions=
+#R.database.neocom.databasehost=jdbc:mysql://localhost:3306
+#R.database.neocom.databasename=neocom
+#R.database.neocom.databaseuser=NEOCOM
+#R.database.neocom.databasepassword=01.Alpha
 R.database.neocom.databaseversion=110
-R.database.neocom.databaseoptions=&verifyServerCertificate=false&useSSL=true
+#R.database.neocom.databaseoptions=&verifyServerCertificate=false&useSSL=true
 R.database.sdedatabase.databaseschema=jdbc:sqlite
 R.database.sdedatabase.databasepath=databases/
 R.database.sdedatabase.databasename=sde.db
