--- a/Neocom.MicroServices/build.gradle
+++ b/Neocom.MicroServices/build.gradle
@@ -144,6 +144,7 @@ dependencies {
     implementation 'com.j256.ormlite:ormlite-jdbc:4.48'
     implementation 'org.xerial:sqlite-jdbc:3.16.1'
     implementation 'mysql:mysql-connector-java:5.1.45'
+//    implementation 'org.postgresql:postgresql:42.2.1'
 
     // T E S T I N G
     // P R O J E C T    D E P E N D E N C I E S
