--- a/Neocom.MicroServices/build.gradle
+++ b/Neocom.MicroServices/build.gradle
@@ -89,12 +89,91 @@ task copyResources(type: Copy) {
         into file('src/main/resources')
     }
 }
-// Gradlew start tast to generate Heroku distribution
+// Gradlew start task to generate Heroku distribution
 task stage {
-//    dependsOn copyResources
     dependsOn installDist
 }
 
+//task experiment1 {
+//    println 'Executing modules JAR generation tasks to update libraries'
+//    project(':ESI.SwaggerApi').tasks.swaggerGenerate.execute()
+//    project(':NeoCom.Model').tasks.build.execute()
+//    project(':NeoCom.DataManagement').tasks.jar.execute()
+//    project(':NeoCom.DataManagement').tasks.jsourcesJar.execute()
+//    project(':NeoCom.DataManagement').tasks.javadocJar.execute()
+//    println 'Moving updated libraries to staging'
+//    copy {
+//        // Modules JAR files
+//        println 'Copying ESI.SwaggerApi library'
+//        from project(':ESI.SwaggerApi').file('build/libs')
+//        into file('libs')
+//    }
+//    project(':ESI.SwaggerApi').ant.move(file: 'libs', tofile: 'Z://NC/libs')
+//}
+task experiment2 {
+    copy {
+        // Modules JAR files
+        println 'Copying ESI.SwaggerApi library'
+        from project(':ESI.SwaggerApi').file('build/libs')
+        into file('libs')
+    }
+    copy {
+        // Modules JAR files
+        println 'Copying NeoCom.DataManagement library'
+        from project(':NeoCom.DataManagement').file('build/libs')
+        into file('libs')
+    }
+    copy {
+        // Modules JAR files
+        println 'Copying NeoCom.Model library'
+        from project(':NeoCom.Model').file('build/libs')
+        into file('libs')
+    }
+    println 'Moving final libraries to staging'
+//    ant.move(file: 'libs', tofile: 'Z://NC/libs')
+    copy {
+        // Modules JAR files
+        println 'Copying NeoCom.Model library'
+        from file('libs')
+        into file('Z://NC/libs')
+    }
+}
+//// Copy modules libraries to destination local folder and them moving away to staging
+//task publish {
+//    copy {
+//        // Modules JAR files
+//        println 'Copying ESI.SwaggerApi library'
+//        from project(':ESI.SwaggerApi').file('build/libs')
+//        into file('libs')
+//    }
+//    copy {
+//        // Modules JAR files
+//        println 'Copying NeoCom.DataManagement library'
+//        from project(':NeoCom.DataManagement').file('build/libs')
+//        into file('libs')
+//    }
+//    copy {
+//        // Modules JAR files
+//        println 'Copying NeoCom.Model library'
+//        from project(':NeoCom.Model').file('build/libs')
+//        into file('libs')
+//    }
+//    println 'Moving final libraries to staging'
+////    ant.move(file: 'libs', tofile: 'Z://NC/libs')
+//}
+//// User task to deply project to staging.
+//task deploy {
+//    dependsOn 'stage'
+//    dependsOn 'publish'
+////    tasks.findByName('stage').mustRunAfter 'installDist'
+//    tasks.findByName('publish').mustRunAfter 'stage'
+//    copy {
+//        // Modules JAR files to staging
+//        println 'Copying updated libraries to staging.'
+//        from file('libs')
+//        into file( 'Z://NC/libs')
+//    }
+//}
 dependencies {
     // P R O J E C T    D E P E N D E N C I E S
     implementation project(path: ':ESI.SwaggerApi')
@@ -107,16 +186,7 @@ dependencies {
     // M O D U L E    D E P E N D E N C I E S
     // S P R I N G B O O T
     compile('org.springframework.boot:spring-boot-starter-web')
-//    implementation 'org.springframework.boot:spring-boot-starter-web:1.3.5.RELEASE'
-//    implementation 'org.springframework.boot:spring-boot-starter-security:1.3.5.RELEASE'
-//    implementation 'org.springframework.boot:spring-boot-starter-actuator:1.3.5.RELEASE'
-//    implementation 'org.springframework.boot:spring-boot-starter-cache:1.3.5.RELEASE'
-
-//    implementation 'org.springframework.boot:spring-boot-starter-web:2.0.0.RELEASE'
-//    implementation 'org.springframework.session:spring-session-core:2.0.2.RELEASE'
-//    implementation 'org.springframework.session:spring-session-data-redis:1.0.0.BUILD-SNAPSHOT'
-//    implementation 'org.springframework.data:spring-data-redis:1.4.1.RELEASE'
-//    implementation 'redis.clients:jedis:2.4.1'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
     // H E R O K U
     compile ratpack.dependency("hikari")
@@ -144,7 +214,6 @@ dependencies {
     implementation 'com.j256.ormlite:ormlite-jdbc:4.48'
     implementation 'org.xerial:sqlite-jdbc:3.16.1'
     implementation 'mysql:mysql-connector-java:5.1.45'
-//    implementation 'org.postgresql:postgresql:42.2.1'
 
     // T E S T I N G
     // P R O J E C T    D E P E N D E N C I E S
