-Integrating the groovy file to serve static data from the same entry point as the backend. -Added new installation and deployment tasks to the gradle configuration file.
Former-commit-id: 8e8426555ae37912fe887c96c5261c3040d0c60b

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ Neocom.MicroServices/privatelibs/
 Neocom.MicroServices/libs/
 Neocom.MicroServices/NeoCom.Infinity/
 Neocom.MicroServices/NeoComCache/
+Neocom.MicroServices/src/main/resources/static/
