-Updated configutation to the one required by Heroku. Even the configuration files are kept separated I have made them as identical as possible.
Former-commit-id: 6d98fa4968732d9ac9cec96cb1ab6abc13cd05ef

--- a/Neocom.MicroServices/build.gradle
+++ b/Neocom.MicroServices/build.gradle
@@ -13,6 +13,7 @@ buildscript {
 
 //--- P L U G I N S
 plugins {
+    id 'groovy'
     id 'java'
     id "io.ratpack.ratpack-groovy" version "1.5.4"
 }
@@ -64,11 +65,11 @@ jar {
 //        writeTo("$buildDir/Manifest.mf")
 //    }
 //}
-//bootJar {
-//    manifest {
-//        attributes 'Start-Class': 'org.dimensinfin.eveonline.neocom.NeoComMicroServiceApplication'
-//    }
-//}
+bootJar {
+    manifest {
+        attributes 'Start-Class': 'org.dimensinfin.eveonline.neocom.NeoComMicroServiceApplication'
+    }
+}
 
 //--- T A S K S
 // Collect output JARs from project modules to staging libs
