-Recovered the file with the esi configuration. This file was not on the repository so it was deleted and there was not recovery possible for its contents.
Former-commit-id: f9e5ae4f4f2ea29bd5f9fbab55955b9d3d618dfd

--- a/Neocom.MicroServices/.gitignore
+++ b/Neocom.MicroServices/.gitignore
@@ -32,3 +32,9 @@ nbdist/
 ## Heroku gradle additions ##
 gradlew
 gradlew.bat
+
+### Project file exceptions
+.idea/workspace.xml
+privatelibs/
+libs/
+src/main/resources/static/
