--- a/Neocom.MicroServices/src/main/resources/properties/databasedefinition.properties
+++ b/Neocom.MicroServices/src/main/resources/properties/databasedefinition.properties
@@ -8,18 +8,22 @@
 #               the source for the specific functionality for the backend services.
 #  DATABASEDEFINITION.PROPERTIES
 #  Defines the NeoCom and the SDE database connection characteristics.
-R.database.neocom.databasetype=postgres
-R.database.neocom.databasehost=jdbc:postgresql://localhost:5432
-R.database.neocom.databasename=postgres
-R.database.neocom.databaseuser=NEOCOM
-R.database.neocom.databasepassword=01.Alpha
-R.database.neocom.databaseoptions=
-#R.database.neocom.databasehost=jdbc:mysql://localhost:3306
-#R.database.neocom.databasename=neocom
+### P O S T G R E S
+#R.database.neocom.databasetype=postgres
+#R.database.neocom.databasehost=jdbc:postgresql://localhost:5432
+#R.database.neocom.databasename=postgres
 #R.database.neocom.databaseuser=NEOCOM
 #R.database.neocom.databasepassword=01.Alpha
+#R.database.neocom.databaseoptions=
+### M Y S Q L
+R.database.neocom.databasetype=mysql
+R.database.neocom.databasehost=jdbc:mysql://localhost:3306
+R.database.neocom.databasename=neocom
+R.database.neocom.databaseuser=NEOCOM
+R.database.neocom.databasepassword=01.Alpha
 R.database.neocom.databaseversion=110
-#R.database.neocom.databaseoptions=&verifyServerCertificate=false&useSSL=true
+R.database.neocom.databaseoptions=&verifyServerCertificate=false&useSSL=true
+### S D E
 R.database.sdedatabase.databaseschema=jdbc:sqlite
 R.database.sdedatabase.databasepath=databases/
 R.database.sdedatabase.databasename=sde.db
