--- a/NeoCom.Infinity/package.json
+++ b/NeoCom.Infinity/package.json
@@ -1,61 +1,53 @@
 {
-  "name": "neo-com.infinity",
-  "version": "0.0.0",
-  "license": "MIT",
+  "name": "NeoCom.Infinity",
+  "version": "0.12.1",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start2": "ng serve --preserve-symlinks --public-host neocom.infinity.org --proxy-config proxy.conf.json",
+    "start": "ng serve --preserve-symlinks",
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "dist:clean": "rm --force --recursive --verbose \"D:/Development/IntelliJProjects/NeoCom WebUI/NeoCom.Infinity 0.12.x/Neocom.MicroServices/src/main/resources/static\"",
+    "dist:copy": "cp --recursive --verbose ./dist \"D:/Development/IntelliJProjects/NeoCom WebUI/NeoCom.Infinity 0.12.x/Neocom.MicroServices/src/main/resources/static\"",
+    "dist": "ng build && npm run dist:clean && npm run dist:copy",
+    "stage": "npm run dist:clean && npm run dist:copy"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "6.0.6",
-    "@angular/common": "6.0.6",
-    "@angular/compiler": "6.0.6",
-    "@angular/core": "^6.0.6",
-    "@angular/forms": "6.0.6",
-    "@angular/http": "6.0.6",
-    "@angular/platform-browser": "6.0.6",
-    "@angular/platform-browser-dynamic": "6.0.6",
-    "@angular/router": "6.0.6",
-    "@fortawesome/fontawesome": "^1.1.8",
-    "@fortawesome/fontawesome-free-brands": "^5.0.13",
-    "@fortawesome/fontawesome-free-regular": "^5.0.13",
-    "@fortawesome/fontawesome-free-solid": "^5.0.13",
-    "angular-font-awesome": "^3.1.2",
-    "angular-oauth2-oidc": "^4.0.2",
-    "angular5-toaster": "^1.0.2",
-    "core-js": "^2.4.1",
-    "font-awesome": "^4.7.0",
-    "ng-drag-drop": "^4.0.1",
-    "ng2-web-cryptography": "0.0.3",
-    "nodemailer": "^4.0.1",
-    "rxjs": "^6.2.1",
-    "socks": "^2.1.6",
+    "@angular/animations": "^6.0.3",
+    "@angular/common": "^6.0.3",
+    "@angular/compiler": "^6.0.3",
+    "@angular/core": "^6.0.3",
+    "@angular/forms": "^6.0.3",
+    "@angular/http": "^6.0.3",
+    "@angular/platform-browser": "^6.0.3",
+    "@angular/platform-browser-dynamic": "^6.0.3",
+    "@angular/router": "^6.0.3",
+    "core-js": "^2.5.4",
+    "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "6.0.8",
-    "@angular/compiler-cli": "6.0.6",
-    "@angular/language-service": "6.0.6",
-    "@types/jasmine": "~2.8.3",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "^6.0.110",
-    "codelyzer": "^4.0.1",
-    "jasmine-core": "~2.8.0",
+    "@angular/compiler-cli": "^6.0.3",
+    "@angular-devkit/build-angular": "~0.6.8",
+    "typescript": "~2.7.2",
+    "@angular/cli": "~6.0.8",
+    "@angular/language-service": "^6.0.3",
+    "@types/jasmine": "~2.8.6",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
+    "codelyzer": "~4.2.1",
+    "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~2.0.0",
+    "karma": "~1.7.1",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
+    "karma-coverage-istanbul-reporter": "~2.0.0",
+    "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
-    "ts-node": "~4.1.0",
-    "tslint": "~5.9.1",
-    "typescript": "2.7.2",
-    "@angular-devkit/build-angular": "~0.6.8"
+    "protractor": "~5.3.0",
+    "ts-node": "~5.0.1",
+    "tslint": "~5.9.1"
   }
 }
