--- a/NeoCom.Infinity/tsconfig.json
+++ b/NeoCom.Infinity/tsconfig.json
@@ -8,6 +8,13 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "es5",
+    "baseUrl": "./src",
+    "paths": {
+      "*": [
+        "*",
+        "app/*"
+      ]
+    },
     "typeRoots": [
       "node_modules/@types"
     ],
