-[MICROSERVICES] Adapting configuration to latest version of the IntelliJ development platform. -[MICROSERVICES] Compiles the Test classes with adaptation to the changes on the initialization phase. -[MICROSERVICES.DATABASE] Upgrading the database specification to the latest database model. -[ANGULAR] Setting ESI configuration properties. -[AUTHENTICATION.MODULE] Adding new return page for the ESI authorication flow. -[AUTHENTICATION.MODULE] Connecting the authorization to be launched from the Welcome page. -[ANGULAR] Starting to add content to the AppModelStore service. Added core definitions and the ESI module.
Former-commit-id: b61e87cc5350617a598843195a3084acd1b1c986

--- a/Neocom.MicroServices/src/main/resources/properties/runtime.properties
+++ b/Neocom.MicroServices/src/main/resources/properties/runtime.properties
@@ -9,6 +9,7 @@
 # RUNTIME.PROPERTIES
 # Definition of properties that set if we are running on development, production or mock data.
 R.runtime.appname=./NeoCom.Infinity
+R.runtime.platform=SpringBoot
 R.runtime.development=true
 R.runtime.mockdata=true
 R.runtime.mockdata.location=mockdata/
