--- a/NeoCom.Infinity/package.json
+++ b/NeoCom.Infinity/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
     "@fortawesome/fontawesome": "^1.1.8",
+    "angular-oauth2-oidc": "^4.0.2",
     "angular2-notifications": "^1.0.2",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
