--- a/NeoCom.Infinity/package.json
+++ b/NeoCom.Infinity/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start2": "ng serve --preserve-symlinks --public-host neocom.infinity.org --proxy-config proxy.conf.json",
-    "start": "ng serve --preserve-symlinks",
+    "start": "ng serve --preserve-symlinks --proxy-config proxy.conf.json",
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
@@ -12,7 +12,8 @@
     "dist:clean": "rm --force --recursive --verbose \"D:/Development/IntelliJProjects/NeoCom WebUI/NeoCom.Infinity 0.12.x/Neocom.MicroServices/src/main/resources/static\"",
     "dist:copy": "cp --recursive --verbose ./dist \"D:/Development/IntelliJProjects/NeoCom WebUI/NeoCom.Infinity 0.12.x/Neocom.MicroServices/src/main/resources/static\"",
     "dist": "ng build && npm run dist:clean && npm run dist:copy",
-    "stage": "npm run dist:clean && npm run dist:copy"
+    "stage": "npm run dist:clean && npm run dist:copy",
+    "startdev": "ng serve --proxy-config proxy.conf.json"
   },
   "private": true,
   "dependencies": {
@@ -27,7 +28,9 @@
     "@angular/router": "^6.0.3",
     "@fortawesome/fontawesome": "^1.1.8",
     "angular-oauth2-oidc": "^4.0.2",
+    "angular-webstorage-service": "^1.0.2",
     "angular2-notifications": "^1.0.2",
+    "bootstrap": "^4.1.1",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "rxjs": "^6.0.0",
