--- a/NeoCom.Infinity/package.json
+++ b/NeoCom.Infinity/package.json
@@ -1,10 +1,8 @@
 {
   "name": "NeoCom.Infinity",
-  "version": "0.12.1",
+  "version": "0.12.2",
   "scripts": {
     "ng": "ng",
-    "start2": "ng serve --preserve-symlinks --public-host neocom.infinity.org --proxy-config proxy.conf.json",
-    "start": "ng serve --preserve-symlinks --proxy-config proxy.conf.json",
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
@@ -13,7 +11,7 @@
     "dist:copy": "cp --recursive --verbose ./dist \"D:/Development/IntelliJProjects/NeoCom WebUI/NeoCom.Infinity 0.12.x/Neocom.MicroServices/src/main/resources/static\"",
     "dist": "ng build && npm run dist:clean && npm run dist:copy",
     "stage": "npm run dist:clean && npm run dist:copy",
-    "startdev": "ng serve --proxy-config proxy.conf.json"
+    "startdev": "ng serve --public-host neocom.infinity.org --proxy-config proxy.conf.json"
   },
   "private": true,
   "dependencies": {
@@ -37,14 +35,13 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^6.0.3",
     "@angular-devkit/build-angular": "~0.6.8",
-    "typescript": "~2.7.2",
     "@angular/cli": "~6.0.8",
+    "@angular/compiler-cli": "^6.0.3",
     "@angular/language-service": "^6.0.3",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
+    "@types/node": "^8.9.5",
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -55,6 +52,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
-    "tslint": "~5.9.1"
+    "tslint": "~5.9.1",
+    "typescript": "~2.7.2"
   }
 }
