-[INFINITY] Upgrading the project to latest Angular/cli version 6.1.4. -[INFINITY] The code that is shared with the POCs is stored into a library. All model classes and the Store service are between the candidates to be moved there.
Former-commit-id: 4f0ed8fb949b1f4ff503b76986115fec14c9c513

--- a/NeoCom.Infinity/angular.json
+++ b/NeoCom.Infinity/angular.json
@@ -123,6 +123,46 @@
           }
         }
       }
+    },
+    "NeoComLib": {
+      "root": "projects/neocom-lib",
+      "sourceRoot": "projects/neocom-lib/src",
+      "projectType": "library",
+      "prefix": "neocom",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-ng-packagr:build",
+          "options": {
+            "tsConfig": "projects/neocom-lib/tsconfig.lib.json",
+            "project": "projects/neocom-lib/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "project": "projects/neocom-lib/ng-package.prod.json"
+            }
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/neocom-lib/src/test.ts",
+            "tsConfig": "projects/neocom-lib/tsconfig.spec.json",
+            "karmaConfig": "projects/neocom-lib/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/neocom-lib/tsconfig.lib.json",
+              "projects/neocom-lib/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
     }
   },
   "defaultProject": "NeoCom.Infinity"
